Engine/OS/iOS/PascalImports.h

void ApplicationUpdate();
void ApplicationShutdown();
bool ApplicationIsHiRes();
    
void ApplicationEnterState(int state);
	
void ApplicationBeginTouch(int x, int y);
void ApplicationMoveTouch(int x, int y);
void ApplicationEndTouch(int x, int y);
//void ApplicationSetViewport(int x1, int y1, int x2, int y2);

void ApplicationOnAccelerometer(float x, float y, float z);
void ApplicationOnGyroscope(float x, float y, float z);
void ApplicationOnCompass(float heading, float pitch, float roll);
void ApplicationOnKeyDown(int key);
void ApplicationOnKeyUp(int key);
void ApplicationOnFacebookPost();
void ApplicationOnFacebookError();
void ApplicationOnContextLost();
void ApplicationResize(int x, int y);
void ApplicationSetScale(float scale);
    
void ApplicationMemoryWarning();
 
	
char* ApplicationGetAppID();
char* ApplicationGetFlurryID();
char* ApplicationGetAdMobBannerID();
char* ApplicationGetAdMobInterstitialID();
char* ApplicationGetFacebookID();
char* ApplicationGetTestFlightID();
char* ApplicationGetAdBuddizID();
char* ApplicationGetChartboostID();
char* ApplicationGetChartboostSecret();
char* ApplicationGetVungleID();