Engine/OS/iOS/TERRA_Utils.h

void openAppStore(char *appid);
void AnalyticsLog(char *s);
void AnalyticsLogWithParams(char *s, char *s2);
int getCurrentOrientation();
void showAds();