Engine/OS/iOS/TERRA_OS.pas


Procedure iPhoneApplication.CloseGraphics;
Begin
End;

Procedure iPhoneApplication.CloseWindow;
Begin
	Log(logDebug,'App', 'Destroying window');
	Log(logDebug,'App', 'Ok');
End;

Procedure iPhoneApplication.SwapBuffers;
Begin
    If (IsInvalidOrientation(_Orientation)) Then
    Begin
        _OrientationTime := 0;
        //SetOrientation(getCurrentOrientation());
        SetOrientation(orientationLandscapeLeft);
    End;
End;

Procedure iPhoneApplication.SetState(State:Cardinal);
Begin
  // TODO
End;

Procedure iPhoneApplication.ProcessMessages;
Begin
End;

Procedure iPhoneApplication.PostToFacebook(msg, link, desc, imageURL:TERRAString);
Begin
  TERRA_OS.PostToFacebook(PAnsiChar(Msg), PAnsiChar(Link), PAnsiChar(Desc), PAnsiChar(ImageURL));
End;

{Procedure iPhoneApplication.ConvertCoords(Var X,Y:Integer);
Begin
  If (_Width<_ScreenWidth) Then
    X := Trunc(X*(_Width/_ScreenWidth)) - _OriginX;

  If (_Height<_ScreenHeight) Then
    Y := Trunc(Y*(_Height/_ScreenHeight)) - _OriginY;
End;}

Procedure iPhoneApplication.SetScale(Scale:Single);
Begin
  _Width := Trunc(_ScreenWidth * iOSScale);
  _Height := Trunc(_ScreenHeight * iOSScale);
End;

Procedure ApplicationUpdate; cdecl; export;
Begin
    Application.Instance.Run;
End;

Procedure ApplicationShutdown; cdecl; export;
Begin
    Application.Instance.Terminate;
End;

Procedure ApplicationSetScale(Value:Single); cdecl; export;
Begin
  iOSScale := Value;
  iPhoneApplication(_Application_Instance).SetScale(Value);
End;

Function ApplicationIsHiRes():Boolean; cdecl; export;
Begin
    Result := True;
End;

Procedure ApplicationBeginTouch(x,y:Integer); cdecl; export;
Begin
    If (Not Assigned(_Application_Instance)) Or (Not Assigned(_Application_Instance.Client))  Then
        Exit;

//	Log(logDebug, 'App', 'ScreenWidth:' + IntToString(_ScreenWidth)+' ScreenHeight:' + IntToString(_ScreenHeight));
    Log(logDebug, 'game','got touch X:'+IntToString(X)+', Y:'+InTToString(Y));

    X := Trunc(X * iOSScale);
    Y := Trunc(Y * iOSScale);

    Log(logDebug, 'game','converted touch X:'+IntToString(X)+', Y:'+InTToString(Y));

    _Application_Instance.AddCoordEvent(eventMouseDown, X, Y, keyMouseLeft);
    Log(logDebug, 'game','final touch X:'+IntToString(X)+', Y:'+InTToString(Y));
End;

Procedure ApplicationMoveTouch(x,y:Integer); cdecl; export;
Begin
    If (Not Assigned(_Application_Instance)) Or (Not Assigned(_Application_Instance.Client))  Then
        Exit;

//	Log(logDebug, 'game','untouch move X:'+IntToString(X)+', Y:'+InTToString(Y));
//    iPhoneApplication(_Application_Instance).ConvertCoords(X,Y);
//	Log(logDebug, 'game','convert move X:'+IntToString(X)+', Y:'+InTToString(Y));

    X := Trunc(X * iOSScale);
    Y := Trunc(Y * iOSScale);

    _Application_Instance.AddCoordEvent(eventMouseMove, X, Y, 0);
//	Log(logDebug, 'game','touch move X:'+IntToString(X)+', Y:'+InTToString(Y));
End;

Procedure ApplicationEndTouch(x,y:Integer); cdecl; export;
Begin
    If (Not Assigned(_Application_Instance)) Or (Not Assigned(_Application_Instance.Client))  Then
        Exit;

    X := Trunc(X * iOSScale);
    Y := Trunc(Y * iOSScale);

//    iPhoneApplication(_Application_Instance).ConvertCoords(X,Y);
    _Application_Instance.AddCoordEvent(eventMouseUp, X, Y, keyMouseLeft);
//	Log(logDebug, 'game','touch up X:'+IntToString(X)+', Y:'+InTToString(Y));
End;

Procedure ApplicationOnKeyDown(Key:Integer); cdecl; export;
Begin
  _Application_Instance.AddValueEvent(eventKeyDown, Key);
End;

Procedure ApplicationOnKeyUp(Key:Integer); cdecl; export;
Begin
  _Application_Instance.AddValueEvent(eventKeyUp, Key);
End;

Procedure ApplicationOnContextLost(); cdecl; export;
Begin
  _Application_Instance.AddValueEvent(eventContextLost, 0);
End;

Procedure ApplicationEnterState(state:Integer); cdecl; export;
Begin
    If (Not Assigned(_Application_Instance)) Or (Not Assigned(_Application_Instance.Client))  Then
        Exit;

    _Application_Instance.Client.OnStateChange(state);
End;

Procedure ApplicationOnAccelerometer(x, y, z:Single); cdecl; export;
Begin
    If Not Assigned(_Application_Instance) Then
        Exit;

  Application.Instance.AddVectorEvent(eventAccelerometer, x,y ,z);
//Log(logDebug, 'game','accel X:'+FloatToString(X)+', Y:'+FloatToString(Y)+', Z:'+FloatToString(Z));
End;

Procedure ApplicationOnGyroscope(x, y, z:Single); cdecl; export;
Begin
    If Not Assigned(_Application_Instance) Then
        Exit;

  Application.Instance.AddVectorEvent(eventGyroscope, x,y ,z);
//Log(logDebug, 'game','accel X:'+FloatToString(X)+', Y:'+FloatToString(Y)+', Z:'+FloatToString(Z));
End;

Procedure ApplicationOnCompass(Heading, Pitch, Roll: Single); cdecl; export;
Begin
    If Not Assigned(_Application_Instance) Then
        Exit;

  Application.Instance.AddVectorEvent(eventCompass, Heading, Pitch, Roll);
//Log(logDebug, 'game','accel X:'+FloatToString(X)+', Y:'+FloatToString(Y)+', Z:'+FloatToString(Z));
End;

Procedure ApplicationResize(Width,Height:Integer); cdecl; export;
Var
    App:iPhoneApplication;
Begin
  If Not Assigned(_Application_Instance) Then
    Exit;

  Log(logDebug, 'game','resize X:'+IntToString(Width)+', Y:'+IntToString(Height));
  _Application_Instance.AddCoordEvent(eventWindowResize, Width, Height, 0);
  Log(logDebug, 'game','resize X:'+IntToString(_Application_Instance.Width)+', Y:'+IntToString(_Application_Instance.Height));
End;

Procedure ApplicationOnFacebookPost(); cdecl; export;
Begin
  If (Not Assigned(_Application_Instance)) Then
    Exit;

  _Application_Instance.Client.OnAPIResult(apiFacebook, facebookPostSucess);
End;

Procedure ApplicationOnFacebookError(); cdecl; export;
Begin
  If (Not Assigned(_Application_Instance)) Then
    Exit;

  _Application_Instance.Client.OnAPIResult(apiFacebook, facebookConnectionError);
End;

Procedure ApplicationMemoryWarning(); cdecl; export;
Begin
  Log(logDebug, 'game','Received memory warning, purging resources...');
  TextureManager.Instance.PurgeResources();
  SoundManager.Instance.PurgeResources();
End;

Procedure iPhoneApplication.EnableAds;
Begin
  //Self.SetViewport(0, 50, Application.Instance.Width, Application.Instance.Height);

  Log(logDebug, 'game','Trying to enable ads...');
  TERRA_OS.showAds();
End;

Procedure iPhoneApplication.ShowFullscreenAd;
Begin
  Log(logDebug, 'game','Showing fullscreen ads...');
  TERRA_OS.showFullscreenAds();
End;

Function iPhoneApplication.GetDeviceID:TERRAString;
Begin
  Result := TERRA_OS.getUniqueDeviceID();
End;

Procedure iPhoneApplication.OpenAppStore(AppID:TERRAString);
Begin
  TERRA_OS.openAppStore(PAnsiChar(AppID));
End;

Procedure iPhoneApplication.SendAnalytics(EventName, Params:TERRAString);
Begin
  If (EventName='') Then
    Exit;

  If (Params<>'') Then
    AnalyticsLogWithParams(PAnsiChar(EventName), PAnsiChar(Params))
  Else
    AnalyticsLog(PAnsiChar(EventName));
End;

Var
  Buffer:Array[0..255] Of Char;

Function GetStringBuffer(S:String):PAnsiChar;
Var
    I:Integer;
Begin
    S := S + #0;
    For I:=1 To Length(S) Do
        Buffer[I] := S[I];
    Result := @Buffer[1];
End;

Function ApplicationGetAppID():PAnsiChar; cdecl; export;
Begin
    Result := GetStringBuffer(Application.Instance.Client.GetAppID());
End;

Function ApplicationGetTestFlightID():PAnsiChar; cdecl; export;
Begin
    Result := GetStringBuffer(Application.Instance.Client.GetTestFlightID());
End;

Function ApplicationGetFlurryID():PAnsiChar; cdecl; export;
Begin
  Result := GetStringBuffer(Application.Instance.Client.GetFlurryID());
End;

Function ApplicationGetAdMobBannerID():PAnsiChar; cdecl; export;
Begin
  Result := GetStringBuffer(Application.Instance.Client.GetadMobBannerID());
End;

Function ApplicationGetAdMobInterstitialID():PAnsiChar; cdecl; export;
Begin
  Result := GetStringBuffer(Application.Instance.Client.GetAdMobInterstitialID());
End;

Function ApplicationGetChartboostID():PAnsiChar; cdecl; export;
Begin
    Result := GetStringBuffer(Application.Instance.Client.GetChartboostID());
End;

Function ApplicationGetChartboostSecret():PAnsiChar; cdecl; export;
Begin
    Result := GetStringBuffer(Application.Instance.Client.GetChartboostSecret());
End;

Function ApplicationGetAdBuddizID():PAnsiChar; cdecl; export;
Begin
  Result := GetStringBuffer(Application.Instance.Client.GetAdBuddizID());
End;

Function ApplicationGetVungleID():PAnsiChar; cdecl; export;
Begin
    Result := GetStringBuffer(Application.Instance.Client.GetVungleID());
End;

Function ApplicationGetFacebookID():PAnsiChar; cdecl; export;
Begin
  Result := GetStringBuffer(Application.Instance.Client.GetFacebookID());
End;

Var
  TestedJailbroke:Boolean;
  JailbrokeResult:Boolean;

Function iPhoneApplication.IsDeviceRooted: Boolean;
Begin
  If Not TestedJailbroke Then
  Begin
    JailbrokeResult := isDeviceJailbroken();
    TestedJailbroke := True;
  End;

  Result := JailbrokeResult;
End;

Function iPhoneApplication.InitAccelerometer: Boolean;
Begin
  Log(logDebug, 'App', 'Enabling accelerometer');
  Result := InitAccelerometer();
End;

Function iPhoneApplication.InitCompass: Boolean;
Begin
  Log(logDebug, 'App', 'Enabling compass');
  Result := InitCompass();
End;

Function iPhoneApplication.InitGyroscope: Boolean;
Begin
  Log(logDebug, 'App', 'Enabling gyroscope');
  Result := InitGyroscope();
End;

Procedure iPhoneApplication.StopAccelerometer;
Begin
  Log(logDebug, 'App', 'Disabling accelerometer');
    StopAccelerometer();
End;

Procedure iPhoneApplication.StopCompass;
Begin
  Log(logDebug, 'App', 'Disabling compass');
  StopCompass();
End;

Procedure iPhoneApplication.StopGyroscope;
Begin
  Log(logDebug, 'App', 'Disabling gyroscope');
  StopGyroscope();
End;

Function iPhoneApplication.InitSettings: Boolean;
Var
  Buffer:Array[0..1024] Of AnsiChar;
  Temp:PAnsiChar;
Begin
  Inherited InitSettings;

  Log(logDebug,'App', 'Setuping app time');
  mach_timebase_info(timeinfo);
  basetime := mach_absolute_time();

  Log(logDebug, 'App', 'Temp Folder: '+ _iOSTempPath);
  _TempPath := _iOSTempPath;

  Log(logDebug, 'App', 'Document Folder: '+ _iOSDocumentPath);
  _DocumentPath := _iOSDocumentPath;
  _StoragePath := _DocumentPath;

  _Country := _iOSCountry;
	Log(logDebug, 'App', 'Country = ' + _Country);

  _Language := _iOSLanguage;
	Log(logDebug, 'App', 'Lang = ' + _Language);

  Log(logDebug, 'App', 'Getting cpu cores');
  _CPUCores := getCPUCores();
  Log(logDebug, 'App', 'Found '+IntToString(_CPUCores)+' cores');

  {$IFDEF NEON_FPU}
  Log(logDebug, 'App', 'Enabling fast fpu mode');
  enable_runfast();
  {$ENDIF}

  Log(logDebug, 'App', 'Getting app version');
  Temp := @Buffer[0];
  getBundleVersion(temp);
  _BundleVersion := Temp;
  Log(logDebug, 'App', 'Found version '+_BundleVersion);


  Result := True;
End;

End.
